Fixing issue on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ nav {
 }
 
 nav a {
-    width: 24.5%;
+    width: 20%;
     margin: auto;
     display: block;
     cursor: pointer;
@@ -33,8 +33,6 @@ nav a {
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
 nav a:hover {
